# Rust-Design-Patterns

./: Cargo.toml  README.md  persons.csv  persons.json
behavioral/: Cargo.toml
behavioral/src/: lib.rs
behavioral/src/chain_of_responsability/: mod.rs
behavioral/src/command/: mod.rs
behavioral/src/interpreter/: mod.rs
behavioral/src/iterator/: mod.rs
behavioral/src/mediator/: mod.rs
behavioral/src/memento/: mod.rs
behavioral/src/null_object/: mod.rs
behavioral/src/observer/: mod.rs
behavioral/src/state/: mod.rs
behavioral/src/strategy/: mod.rs
behavioral/src/template_method/: mod.rs
behavioral/src/value_object/: mod.rs
behavioral/src/visitor/: mod.rs
creational/: Cargo.toml
creational/src/: lib.rs
creational/src/abstract_factory/: mod.rs
creational/src/builder/: mod.rs
creational/src/factory/: mod.rs
creational/src/lazy/: mod.rs
creational/src/prototype/: mod.rs
creational/src/singleton/: mod.rs
creational/src/static_factory/: mod.rs
data-downloader-derive/: Cargo.toml
data-downloader-derive/src/: lib.rs
functional/: Cargo.toml
functional/src/: lib.rs
functional/src/functors/: mod.rs
functional/src/monads/: mod.rs
functional/src/monoids/: mod.rs
ressources/: file3.txt  input.txt  persons.csv  persons.json
src/: lib.rs
structural/: Cargo.toml
structural/src/: lib.rs
structural/src/adapter/: mod.rs
structural/src/bridge/: mod.rs
structural/src/composite/: mod.rs
structural/src/decorator/: mod.rs
structural/src/facade/: mod.rs
structural/src/flyweight/: mod.rs
structural/src/proxy/: mod.rs
